src/css/custom.css
/* stylelint-disable max-line-length */
/* stylelint-disable value-keyword-case */
/* stylelint-disable docusaurus/copyright-header */

/**
 * Any CSS included here will be global. The classic template
 * bundles Infima by default. Infima is a CSS framework designed to
 * work well for content-centric websites.
 */

/* Fonts */
@font-face {
  font-family: "Inter var";
  font-weight: 100 900;
  font-display: block;
  font-style: normal;
  src: url("/fonts/Inter-roman.var.woff2") format("woff2");
}

@font-face {
  font-family: "Fira Code VF";
  font-weight: 300 700;
  font-style: normal;
  src:
    url("/fonts/FiraCode-VF.woff2") format("woff2-variations"),
    url("/fonts/FiraCode-VF.woff") format("woff-variations");
}

/* You can override the default Infima variables here. */
:root {
  --ifm-spacing-horizontal: 1.5rem;
  --ifm-font-family-base: "Inter var", system-ui, -apple-system, Segoe UI, Roboto, Ubuntu, Cantarell, Noto Sans, sans-serif, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
  --ifm-font-family-monospace: "Fira Code VF", SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
  --ifm-code-font-size: 95%; /* code block font size */
  --site-primary-hue-saturation: 210 68%; /* announcementBar */

  /* https://docusaurus.io/docs/styling-layout#styling-your-site-with-infima */
  --ifm-color-primary: #4c00ff;
  --ifm-color-primary-dark: #4400e6;
  --ifm-color-primary-darker: #4100d9;
  --ifm-color-primary-darkest: #3500b3;
  --ifm-color-primary-light: #5e1aff;
  --ifm-color-primary-lighter: #6726ff;
  --ifm-color-primary-lightest: #5108ff;

  /* Docs sidebar Collapse&Expand button */
  --docs-color: #dadde1;
}

html[data-theme="dark"] {
  --ifm-color-primary: #b388ff;
  --ifm-color-primary-dark: #fefdff;
  --ifm-color-primary-darker: #d8c3ff;
  --ifm-color-primary-darkest: #ccafff;
  --ifm-color-primary-light: #ccafff;
  --ifm-color-primary-lighter: #d8c3ff;
  --ifm-color-primary-lightest: #fefdff;
  --docs-color: #2e2e2e;
}

html .hero--primary {
  --ifm-hero-background-color: #413b7d;
}

html[data-theme="dark"] .hero--primary {
  --ifm-hero-background-color: #2b3137;
}

.product-showcase-section {
  color: var(--color-primary);
}

@keyframes logo-animation {
  from {
    transform: translateX(-100%);
  }

  to {
    transform: translateX(0%);
  }
}

.header-github-link::before {
  content: "";
  width: 32px;
  height: 32px;
  display: flex;
  background:
    url("data:image/svg+xml,%3Csvg viewBox='0 0 24 24' aria-hidden='true' focusable='false' fill='%23000000' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath fill-rule='evenodd' d='M12.026 2c-5.509 0-9.974 4.465-9.974 9.974 0 4.406 2.857 8.145 6.821 9.465.499.09.679-.217.679-.481 0-.237-.008-.865-.011-1.696-2.775.602-3.361-1.338-3.361-1.338-.452-1.152-1.107-1.459-1.107-1.459-.905-.619.069-.605.069-.605 1.002.07 1.527 1.028 1.527 1.028.89 1.524 2.336 1.084 2.902.829.091-.645.351-1.085.635-1.334-2.214-.251-4.542-1.107-4.542-4.93 0-1.087.389-1.979 1.024-2.675-.101-.253-.446-1.268.099-2.64 0 0 .837-.269 2.742 1.021a9.582 9.582 0 0 1 2.496-.336 9.554 9.554 0 0 1 2.496.336c1.906-1.291 2.742-1.021 2.742-1.021.545 1.372.203 2.387.099 2.64.64.696 1.024 1.587 1.024 2.675 0 3.833-2.33 4.675-4.552 4.922.355.308.675.916.675 1.846 0 1.334-.012 2.41-.012 2.737 0 .267.178.577.687.479C19.146 20.115 22 16.379 22 11.974 22 6.465 17.535 2 12.026 2z' clip-rule='evenodd'%3E%3C/path%3E%3C/svg%3E")
    no-repeat;
}

html[data-theme="dark"] .header-github-link::before {
  background:
    url("data:image/svg+xml,%3Csvg viewBox='0 0 24 24' aria-hidden='true' focusable='false' fill='%23b4b4b4' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath fill-rule='evenodd' d='M12.026 2c-5.509 0-9.974 4.465-9.974 9.974 0 4.406 2.857 8.145 6.821 9.465.499.09.679-.217.679-.481 0-.237-.008-.865-.011-1.696-2.775.602-3.361-1.338-3.361-1.338-.452-1.152-1.107-1.459-1.107-1.459-.905-.619.069-.605.069-.605 1.002.07 1.527 1.028 1.527 1.028.89 1.524 2.336 1.084 2.902.829.091-.645.351-1.085.635-1.334-2.214-.251-4.542-1.107-4.542-4.93 0-1.087.389-1.979 1.024-2.675-.101-.253-.446-1.268.099-2.64 0 0 .837-.269 2.742 1.021a9.582 9.582 0 0 1 2.496-.336 9.554 9.554 0 0 1 2.496.336c1.906-1.291 2.742-1.021 2.742-1.021.545 1.372.203 2.387.099 2.64.64.696 1.024 1.587 1.024 2.675 0 3.833-2.33 4.675-4.552 4.922.355.308.675.916.675 1.846 0 1.334-.012 2.41-.012 2.737 0 .267.178.577.687.479C19.146 20.115 22 16.379 22 11.974 22 6.465 17.535 2 12.026 2z' clip-rule='evenodd'%3E%3C/path%3E%3C/svg%3E")
    no-repeat;
}

.header-github-link {
  opacity: 0.6;
}

.header-github-link:hover {
  opacity: 1;
}

.showcaseLogos {
  align-items: center;
  display: flex;
  flex-flow: row wrap;
  justify-content: center;
}

.showcaseLogo {
  width: 150px;
  height: 150px;
  display: flex;
  align-items: center;
  margin: 10px;
  justify-content: center;
}

div[class^="announcementBar_"] {
  --site-announcement-bar-stripe-color1:
    hsl(
      var(--site-primary-hue-saturation) 85%
    );
  --site-announcement-bar-stripe-color2:
    hsl(
      var(--site-primary-hue-saturation) 95%
    );

  background:
    repeating-linear-gradient(
      35deg,
      var(--site-announcement-bar-stripe-color1),
      var(--site-announcement-bar-stripe-color1) 20px,
      var(--site-announcement-bar-stripe-color2) 10px,
      var(--site-announcement-bar-stripe-color2) 40px
    );
  font-weight: bold;
}

/* background: https://www.iconfont.cn/collections/detail?spm=a313x.7781069.0.da5a778a4&cid=33 */
.header-community-link::before {
  content: "";
  width: 32px;
  height: 32px;
  display: flex;
  background:
    url("data:image/svg+xml,%3Csvg class='icon' viewBox='0 0 1024 1024' xmlns='http://www.w3.org/2000/svg' width='32' height='32'%3E%3Cpath d='M704 732.8c51.2 0 96-41.6 96-96V224c0-51.2-41.6-96-96-96H156.8c-51.2 0-96 41.6-96 96v412.8c0 51.2 41.6 96 96 96H192v160c0 12.8 9.6 25.6 22.4 32h9.6c9.6 0 19.2-3.2 25.6-12.8l131.2-179.2H704z' fill='%232c2c2c'/%3E%3Cpath d='M864 252.8c-19.2 0-32 12.8-32 32s16 32 32 32 32 12.8 32 32v348.8c0 19.2-16 25.6-32 25.6h-32c-19.2 0-32 12.8-32 32v3.2c0 3.2-3.2 6.4-3.2 9.6v60.8l-73.6-57.6c-3.2-3.2-9.6-3.2-16-3.2H544c-19.2 0-32 12.8-32 32s12.8 32 32 32h153.6l115.2 89.6c6.4 3.2 12.8 6.4 19.2 6.4 3.2 0 9.6 0 12.8-3.2 9.6-6.4 19.2-16 19.2-28.8V787.2c54.4 0 96-38.4 96-89.6V348.8c0-51.2-44.8-96-96-96z' fill='%232c2c2c'/%3E%3C/svg%3E")
    no-repeat;
}

html[data-theme="dark"] .header-community-link::before {
  background:
    url("data:image/svg+xml,%3Csvg class='icon' viewBox='0 0 1024 1024' xmlns='http://www.w3.org/2000/svg' width='32' height='32'%3E%3Cpath d='M704 732.8c51.2 0 96-41.6 96-96V224c0-51.2-41.6-96-96-96H156.8c-51.2 0-96 41.6-96 96v412.8c0 51.2 41.6 96 96 96H192v160c0 12.8 9.6 25.6 22.4 32h9.6c9.6 0 19.2-3.2 25.6-12.8l131.2-179.2H704z' fill='%23dbdbdb'/%3E%3Cpath d='M864 252.8c-19.2 0-32 12.8-32 32s16 32 32 32 32 12.8 32 32v348.8c0 19.2-16 25.6-32 25.6h-32c-19.2 0-32 12.8-32 32v3.2c0 3.2-3.2 6.4-3.2 9.6v60.8l-73.6-57.6c-3.2-3.2-9.6-3.2-16-3.2H544c-19.2 0-32 12.8-32 32s12.8 32 32 32h153.6l115.2 89.6c6.4 3.2 12.8 6.4 19.2 6.4 3.2 0 9.6 0 12.8-3.2 9.6-6.4 19.2-16 19.2-28.8V787.2c54.4 0 96-38.4 96-89.6V348.8c0-51.2-44.8-96-96-96z' fill='%23dbdbdb'/%3E%3C/svg%3E")
    no-repeat;
}

.header-community-link {
  opacity: 0.6;
}

.header-community-link:hover {
  opacity: 1;
}

.casdoor-link {
  background-color: rgb(89 81 173);
  border-radius: 4px;
  margin-right: 12px;
  transition-property: all;
}

.casdoor-link svg {
  display: inline-block;
  vertical-align: middle;
  margin-bottom: 0.2rem;
}

.casdoor-signup {
  color: #fff;

  --ifm-link-hover-color: #fff;
  --ifm-navbar-link-hover-color: #fff;
}

.casdoor-signup:hover {
  background-color: rgb(108 99 211);
}

.casdoor-login {
  --ifm-navbar-link-hover-color: rgb(108 99 211);

  background-color: transparent;
}

.navbar-sidebar .casdoor-link {
  padding: 0.75rem;
  margin-top: 1rem;
}

/* navbar items */
.navbar__item {
  font-size: 14px;
}

/* doc sidebar */
.menu__link {
  font-size: 14px;
  border-radius: 4px 0 0 4px;

  --ifm-menu-color-background-active: rgb(113 102 222 / 33%);
}

.menu__list-item-collapsible:hover {
  background: none;
}

ul.menu__list > li > a.menu__link--active {
  border-right: 1px solid var(--ifm-color-primary);
}

/* Custom design for sidebar hide and expand buttons */
aside.theme-doc-sidebar-container {
  position: relative;
  clip-path: inset(0 -140px);
}

.theme-doc-sidebar-container button[title="Collapse sidebar"],
.theme-doc-sidebar-container div[title="Expand sidebar"] {
  position: absolute;
  top: 96px;
  right: -14px;
  width: 28px;
  height: 28px;
  padding: 0;
  border-radius: 4px;
  z-index: 10;
  background-size: 16px;
  background-position: center;
  background-repeat: no-repeat;
  background-color: var(--docs-color);
  background-image: url("data:image/svg+xml,%3Csvg width='24' height='24' fill='none' viewBox='0 0 24 24' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M15.707 4.293a1 1 0 0 1 0 1.414L9.414 12l6.293 6.293a1 1 0 0 1-1.414 1.414l-7-7a1 1 0 0 1 0-1.414l7-7a1 1 0 0 1 1.414 0Z' fill='%23181818'/%3E%3C/svg%3E");
}

.theme-doc-sidebar-container div[title="Expand sidebar"] {
  position: sticky;
  margin-left: 16px;
  background-image: url("data:image/svg+xml,%3Csvg width='24' height='24' fill='none' viewBox='0 0 24 24' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M8.293 4.293a1 1 0 0 0 0 1.414L14.586 12l-6.293 6.293a1 1 0 1 0 1.414 1.414l7-7a1 1 0 0 0 0-1.414l-7-7a1 1 0 0 0-1.414 0Z' fill='%23181818'/%3E%3C/svg%3E");
}

html[data-theme="dark"] .theme-doc-sidebar-container button[title="Collapse sidebar"] {
  background-image: url("data:image/svg+xml,%3Csvg width='24' height='24' fill='none' viewBox='0 0 24 24' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M15.707 4.293a1 1 0 0 1 0 1.414L9.414 12l6.293 6.293a1 1 0 0 1-1.414 1.414l-7-7a1 1 0 0 1 0-1.414l7-7a1 1 0 0 1 1.414 0Z' fill='%23ffffff'/%3E%3C/svg%3E");
}

html[data-theme="dark"] .theme-doc-sidebar-container div[title="Expand sidebar"] {
  background-image: url("data:image/svg+xml,%3Csvg width='24' height='24' fill='none' viewBox='0 0 24 24' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M8.293 4.293a1 1 0 0 0 0 1.414L14.586 12l-6.293 6.293a1 1 0 1 0 1.414 1.414l7-7a1 1 0 0 0 0-1.414l-7-7a1 1 0 0 0-1.414 0Z' fill='%23ffffff'/%3E%3C/svg%3E");
}

.theme-doc-sidebar-container :is(div[title="Expand sidebar"], button[title="Collapse sidebar"]) svg {
  display: none;
}

